site: fix downloads spacing and docs order

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -101,7 +101,7 @@ $lightlink: $link;
 }
 
 .section-with-bottom-air {
-  padding-bottom: 64px;
+  padding-bottom: 64px !important;
 }
 
 .papers-section {
